# Syllabus-Sync

./: .replit  .replit.workflow  .replit.workflow-optimized  API_DOCUMENTATION.md  README.md  api_analysis.py  api_analysis_improved.py  api_example.md  api_server.py  app.py  app_head.txt  app_tail.txt  course_evaluation_output.txt  detailed_checklist_table.py  document_processor.py  document_processor.py.backup2  enhanced_checklist.txt  enhanced_checklist.txt.backup  evaluate_checklist.py  evaluate_course_outline.py  evaluate_outline.py  extract_checklist.py  final_course_evaluation.py  gunicorn_config.py  improved_pattern_matching.py  index_route.txt  main.py  main_new.py  models.py  openai_helper.py  openai_helper.py.backup  openai_helper.py.bak  process_checklist.py  professional_pdf_generator.py  pyproject.toml  quick_api_test.py  replit.nix  response.json  run.sh  run_with_timeout.sh  (+19 more)
attached_assets/: Pasted-Hi-I-need-help-improving-the-accuracy-of-my-course-outline-compliance-checker-The-system-is-curren-1744164651254.txt  Pasted-Instructor-Email-Does-the-outline-include-the-instructor-s-email-An-acceptable-email-must-end-with-1744169071911.txt  Pasted-The-outline-provides-a-statement-on-tools-platforms-or-resources-allowed-or-restricted-e-g-AI-t-1744164108748.txt  Pasted-You-are-reviewing-a-university-course-outline-to-evaluate-whether-it-meets-institutional-standards-b-1744082496300.txt  Pasted-from-flask-import-Flask-request-jsonify-render-template-from-werkzeug-utils-import-secure-filena-1743828135445.txt
templates/: dashboard.html  document.html  index.html  (+6 more)
(+9 files in other folders)
