[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "fpdf2>=2.8.2",
    "fpdf>=1.7.2",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "openai>=1.70.0",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
